--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -224,17 +224,21 @@
                                     <span class="icon-circle-arrow-left"></span> Back
                                 </a>
                             </li>
-                            <li set-if="processErrors.length > 0 || projectWarnings.length > 0">
-                                <a href="#warnings" target="_self"
-                                   ng-class="{activeView: view=='warnings', hidden: issuesTabHidden}"
-                            </li>
                         </ul>
 
                         <div class="pull-right" style="margin-right: 20px;" ng-if="licenceType == 'FREE' || !hideLogoOnTop">
-                            <a href="http://www.miredot.com" target="_blank"><img src="img/miredot_mini_title.png"></a>
+                            <a href="http://www.github.com/michaeldisalvo" target="_blank"><img src="img/IMG_1032.png"></a>
                             <i class="icon-exclamation-sign failedIcon" set-if="!validLicence && !!licenceErrorMessage" set-title="licenceErrorMessage"></i>
                         </div>
 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="notice invalidlicence" set-if="!validLicence">
+                            <i class="icon-exclamation-sign" title="Invalid key"></i>
+                            <span set-html="licenceErrorMessage"></span>
+                        </div>
                     </div>
                 </div>
 
@@ -269,6 +273,7 @@
                 <div ng-click="interface.collapsed = !interface.collapsed" style="cursor: pointer;" set-id="interface.hash">
                     <h3 class="methodTitle"
                         set-class="deprecated : interface.deprecated, valueMissing : ! interface.title"
+                        set-html="interface.title || 'title missing'">
                     </h3>
                 </div>
 
