--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -139,7 +139,7 @@
                 ng-include="'resource_nav_item_renderer.html'"></li>
         </ul>
     </div>
-        
+
     <div ng-show="navigationView == 'search'">
         <div id="searchform">
         <form>
@@ -227,7 +227,7 @@
                         </ul>
 
                         <div class="pull-right" style="margin-right: 20px;" ng-if="licenceType == 'FREE' || !hideLogoOnTop">
-                            <a href="http://www.github.com/michaeldisalvo" target="_blank"><img src="img/IMG_1032.png"></a>
+                            <a href="http://www.github.com/mdisalvo/grndctl" target="_blank"><img src="img/IMG_1032.png"></a>
                             <i class="icon-exclamation-sign failedIcon" set-if="!validLicence && !!licenceErrorMessage" set-title="licenceErrorMessage"></i>
                         </div>
 
