Added call to StationSvc to get airport status (delays)

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -361,7 +361,7 @@
                             <div class="pull-right" style="margin-right: 20px;"
                                  ng-if="licenceType == 'FREE' || !hideLogoOnTop">>
                                 <a href="https://www.getpostman.com/collections/629a77c98666295a8062" target="_blank"><img
-                                        src="img/postman_logo.png"</a>
+                                        src="img/postman_logo.png"></a>
                             </div>
 
                         </div>
